tests/rosetta/out/Ruby/achilles-numbers.error
run error: exit status 1
/workspace/mochi/tests/rosetta/out/Ruby/achilles-numbers.rb:116:in `main': undefined method `call' for [25, 36, 49, 100, 121, 144, 169, 196, 225, 289, 324, 361, 400, 441, 484, 529, 576, 676, 784, 841, 900, 961, 1089, 1156, 1225, 1369, 1444, 1521, 1600, 1681, 1764, 1849, 1936, 2025, 2116, 2209, 2304, 2500, 2601, 2704, 2809, 2916, 3025, 3136, 3249, 3364, 3481, 3600, 3721, 3844, 3969, 4225, 4356, 4489, 4624, 4761, 4900, 5041, 5184, 5329, 5476, 5625, 5776, 5929, 6084, 6241, 6400, 6724, 6889, 7056, 7225, 7396, 7569, 7744, 7921, 8100, 8281, 8464, 8649, 8836, 9025, 9216, 9409, 9604, 9801, 10201, 10404, 10609, 10816, 11025, 11236, 11449, 11664, 11881, 12100, 12321, 12544, 12769, 12996, 13225, 13456, 13689, 13924, 14161, 14400, 14884, 15129, 15376, 15876, 16129, 16641, 16900, 17161, 17424, 17689, 17956, 18225, 18496, 18769, 19044, 19321, 19600, 19881, 20164, 20449, 21025, 21316, 21609, 21904, 22201, 22500, 22801, 23104, 23409, 23716, 24025, 24336, 24649, 24964, 25281, 25600, 25921, 26244, 26569, 26896, 27225, 27556, 27889, 28224, 28900, 29241, 29584, 29929, 30276, 30625, 30976, 31329, 31684, 32041, 32400, 32761, 33124, 33489, 33856, 34225, 34596, 34969, 35344, 35721, 36100, 36481, 36864, 37249, 37636, 38025, 38809, 39204, 39601, 40000, 40401, 40804, 41209, 41616, 42025, 42436, 42849, 43264, 43681, 44100, 44521, 44944, 45369, 45796, 46225, 47089, 47524, 47961, 48400, 48841, 49284, 49729, 50176, 51076, 51529, 51984, 52441, 52900, 53361, 53824, 54289, 54756, 55225, 55696, 56169, 56644, 57121, 57600, 58081, 58564, 59536, 60025, 60516, 61009, 61504, 62001, 62500, 63001, 63504, 64009, 64516, 65025, 66049, 66564, 67081, 67600, 68121, 68644, 69169, 69696, 70225, 70756, 71289, 71824, 72361, 72900, 73441, 73984, 74529, 75076, 75625, 76176, 76729, 77284, 77841, 78400, 78961, 79524, 80089, 80656, 81225, 81796, 82369, 82944, 84100, 84681, 85264, 85849, 86436, 87025, 87616, 88209, 88804, 89401, 90000, 90601, 91204, 91809, 92416, 93025, 93636, 94249, 94864, 95481, 96100, 96721, 97344, 97969, 98596, 99225, 99856, 72, 200, 288, 392, 648, 800, 968, 1152, 1352, 1568, 1800, 2312, 2592, 2888, 3200, 3528, 3872, 4232, 4608, 5000, 5408, 6272, 6728, 7200, 7688, 8712, 9248, 9800, 10368, 10952, 11552, 12168, 12800, 13448, 14112, 14792, 15488, 16200, 16928, 17672, 18432, 19208, 20000, 20808, 21632, 22472, 23328, 24200, 25088, 25992, 26912, 27848, 28800, 29768, 30752, 31752, 33800, 34848, 35912, 36992, 38088, 39200, 40328, 41472, 42632, 43808, 45000, 46208, 47432, 48672, 49928, 51200, 52488, 53792, 55112, 56448, 57800, 59168, 60552, 61952, 63368, 64800, 66248, 67712, 69192, 70688, 72200, 73728, 75272, 76832, 78408, 80000, 81608, 83232, 84872, 86528, 88200, 89888, 91592, 93312, 95048, 96800, 98568, 108, 432, 675, 972, 1323, 2700, 3267, 3888, 4563, 5292, 6075, 6912, 7803, 8748, 9747, 10800, 11907, 13068, 14283, 15552, 16875, 18252, 21168, 22707, 24300, 25947, 27648, 29403, 31212, 33075, 34992, 36963, 38988, 41067, 43200, 45387, 47628, 49923, 52272, 54675, 57132, 59643, 62208, 64827, 67500, 70227, 73008, 75843, 78732, 81675, 84672, 87723, 90828, 93987, 97200, 500, 1125, 2000, 4500, 6125, 10125, 12500, 15125, 18000, 21125, 24500, 28125, 32000, 36125, 40500, 45125, 50000, 55125, 60500, 66125, 72000, 84500, 98000, 864, 1944, 3456, 5400, 10584, 17496, 21600, 26136, 31104, 36504, 42336, 48600, 55296, 62424, 69984, 77976, 86400, 95256, 1372, 3087, 5488, 8575, 12348, 27783, 34300, 41503, 49392, 57967, 67228, 77175, 87808, 99127, 4000, 9000, 16000, 25000, 36000, 49000, 81000, 5324, 11979, 21296, 33275, 47916, 65219, 8788, 19773, 35152, 54925, 79092, 10976, 24696, 43904, 68600, 98784, 13500, 30375, 54000, 84375, 19652, 44217, 78608, 27436, 61731, 37044, 83349, 42592, 95832, 48668, 70304, 97556]:Array (NoMethodError)

	achSet.keys.call().each do |k|
	           ^^^^^
	from /workspace/mochi/tests/rosetta/out/Ruby/achilles-numbers.rb:172:in `<main>'
