tests/rosetta/out/Ruby/achilles-numbers.rb
# Generated by Mochi compiler v0.10.26 on 2025-07-16T12:21:58Z
def pow10(exp)
	n = 1
	i = 0
	while (i < exp)
		n = (n * 10)
		i = (i + 1)
	end
	return n
end

def totient(n)
	tot = n
	nn = n
	i = 2
	while ((i * i) <= nn)
		if ((nn % i) == 0)
			while ((nn % i) == 0)
				nn = (nn / i)
			end
			tot = (tot - (tot / i))
		end
		if (i == 2)
			i = 1
		end
		i = (i + 2)
	end
	if (nn > 1)
		tot = (tot - (tot / nn))
	end
	return tot
end

def getPerfectPowers(maxExp)
	upper = pow10(maxExp)
	i = 2
	while ((i * i) < upper)
		p = (i * i)
		while true
			p = (p * i)
			if (p >= upper)
				break
			end
			$pps[p] = true
		end
		i = (i + 1)
	end
end

def getAchilles(minExp, maxExp)
	lower = pow10(minExp)
	upper = pow10(maxExp)
	achilles = {}
	b = 1
	while (((b * b) * b) < upper)
		b3 = ((b * b) * b)
		a = 1
		while true
			p = ((b3 * a) * a)
			if (p >= upper)
				break
			end
			if (p >= lower)
				if (!(($pps.to_h.key?(p))))
					achilles[p] = true
				end
			end
			a = (a + 1)
		end
		b = (b + 1)
	end
	return achilles
end

def sortInts(xs)
	res = []
	tmp = xs
	while ((tmp).length > 0)
		min = tmp[0]
		idx = 0
		i = 1
		while (i < (tmp).length)
			if (tmp[i] < min)
				min = tmp[i]
				idx = i
			end
			i = (i + 1)
		end
		res = (res + [min])
		out = []
		j = 0
		while (j < (tmp).length)
			if (j != idx)
				out = (out + [tmp[j]])
			end
			j = (j + 1)
		end
		tmp = out
	end
	return res
end

def pad(n, width)
	s = (n).to_s
	while ((s).length < width)
		s = (" " + s)
	end
	return s
end

def main()
	maxDigits = 15
	getPerfectPowers(maxDigits)
	achSet = getAchilles(1, 5)
	ach = []
	achSet.keys.call().each do |k|
		ach = (ach + [k])
	end
	ach = sortInts(ach)
	puts("First 50 Achilles numbers:")
	i = 0
	while (i < 50)
		line = ""
		j = 0
		while (j < 10)
			line = (line + pad(ach[i], 4))
			if (j < 9)
				line = (line + " ")
			end
			i = (i + 1)
			j = (j + 1)
		end
		puts(line)
	end
	puts("\nFirst 30 strong Achilles numbers:")
	strong = []
	count = 0
	idx = 0
	while (count < 30)
		tot = totient(ach[idx])
		if (achSet.include?(tot))
			strong = (strong + [ach[idx]])
			count = (count + 1)
		end
		idx = (idx + 1)
	end
	i = 0
	while (i < 30)
		line = ""
		j = 0
		while (j < 10)
			line = (line + pad(strong[i], 5))
			if (j < 9)
				line = (line + " ")
			end
			i = (i + 1)
			j = (j + 1)
		end
		puts(line)
	end
	puts("\nNumber of Achilles numbers with:")
	counts = [1, 12, 47, 192, 664, 2242, 7395, 24008, 77330, 247449, 788855, 2508051, 7960336, 25235383]
	d = 2
	while (d <= maxDigits)
		c = counts[(d - 2)]
		puts(((pad(d, 2) + " digits: ") + (c).to_s))
		d = (d + 1)
	end
end

$pps = {}
main()
